# modality

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Modality.jucer  README.md
JuceLibraryCode/: JuceHeader.h
Source/: AppColours.h  AppMenuModel.cpp  AppMenuModel.h  Cursor.cpp  Cursor.h  Main.cpp  MainComponent.cpp  MainComponent.h  Note.h  NoteComponent.cpp  NoteComponent.h  Sequence.cpp  Sequence.h  SequenceComponent.cpp  SequenceComponent.h  SequenceView.cpp  SequenceView.h  Step.cpp  Step.h  StepComponent.cpp  StepComponent.h  StepView.cpp  StepView.h
Source/Audio/: MidiOutputManager.cpp  MidiOutputManager.h  ScheduledEvent.h  Transport.cpp  Transport.h  TransportEngine.cpp  TransportEngine.h
Source/Components/: BeatLegendComponent.cpp  BeatLegendComponent.h  ContextualMenuComponent.cpp  ContextualMenuComponent.h  CoordinateUtils.h  CursorComponent.cpp  CursorComponent.h  MainComponent.cpp  MainComponent.h  MidlineComponent.cpp  MidlineComponent.h  ModifierComponentFactory.h  ModifierMenuComponent.cpp  ModifierMenuComponent.h  NoteComponent.cpp  NoteComponent.h  PaginatedSettingsComponent.cpp  PaginatedSettingsComponent.h  PitchLegendComponent.cpp  PitchLegendComponent.h  SequenceComponent.cpp  SequenceComponent.h  SequenceSelection.h  SequenceSelectionComponent.cpp  SequenceSelectionComponent.h  ShortcutInfoComponent.cpp  ShortcutInfoComponent.h  StatusBarComponent.cpp  StatusBarComponent.h  StepComponent.cpp  StepComponent.h
Source/Data/: AppSettings.cpp  AppSettings.h  Composition.cpp  Composition.h  Cursor.cpp  Cursor.h  Grid.h  KeyboardShortcutManager.cpp  KeyboardShortcutManager.h  MenuNode.cpp  MenuNode.h  Modifier.cpp  Modifier.h  ModifierApplicator.cpp  Note.cpp  (+16 more)
cmake/: cpm.cmake  osx.cmake
(+18 files in other folders)
